--- a/forder.html
+++ b/forder.html
@@ -22,7 +22,6 @@ main {
     align-content: normal;
     overflow: hidden;
 }
-        /* Order Summary Section (Column Layout) */
         .order-summary {
             display: flex;
             flex-direction: row;
@@ -178,10 +177,8 @@ main {
       </div>
      
 
-  <!-- Main Content Area -->
   <main style="flex: 1; padding: 20px; background: white;">
     <div style="display: flex; justify-content: space-between; gap: 20px;">
-      <!-- Card 1 -->
       <div style="flex: 1; background: white; padding: 20px; border-radius: 12px; box-shadow: 10px 4px 10px rgba(0,0,0,0.1); display: flex; align-items: center; gap: 15px;">
         <div style="background: #3498db; color: white; padding: 15px; border-radius: 50%; font-size: 20px;">
           <i class="fas fa-shopping-cart"></i>
@@ -192,7 +189,6 @@ main {
         </div>
       </div>
 
-      <!-- Card 2 -->
       <div style="flex: 1; background: white; padding: 20px; border-radius: 12px; box-shadow: 10px 4px 10px rgba(0,0,0,0.1); display: flex; align-items: center; gap: 15px;">
         <div style="background: #f39c12; color: white; padding: 15px; border-radius: 50%; font-size: 20px;">
           <i class="fas fa-clock"></i>
@@ -203,7 +199,6 @@ main {
         </div>
       </div>
 
-      <!-- Card 3 -->
       <div style="flex: 1; background: white; padding: 20px; border-radius: 12px; box-shadow: 10px 4px 10px rgba(0,0,0,0.1); display: flex; align-items: center; gap: 15px;">
         <div style="background: #2ecc71; color: white; padding: 15px; border-radius: 50%; font-size: 20px;">
           <i class="fas fa-check-circle"></i>
@@ -214,7 +209,6 @@ main {
         </div>
       </div>
 
-      <!-- Card 4 -->
       <div style="flex: 1; background: white; padding: 20px; border-radius: 12px; box-shadow: 10px 4px 10px rgba(0,0,0,0.1); display: flex; align-items: center; gap: 15px;">
         <div style="background: #e74c3c; color: white; padding: 15px; border-radius: 50%; font-size: 20px;">
           <i class="fas fa-times-circle"></i>
@@ -228,11 +222,9 @@ main {
   </main>
 </div>
 
-<!-- Font Awesome for Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
    
 
-    <!-- Charts -->
     <div class="charts-container">
             <div class="chart-container">
                 <div style="margin-bottom: 20px; display: flex; justify-content: flex-end;">
@@ -251,7 +243,6 @@ main {
         </div>
         </div>
 
-    <!-- Order Details -->
     <div class="order-details">
         <div class="order-card">
             <h3>Order #101</h3>
@@ -304,7 +295,7 @@ main {
           '#A52A2A', '#40E0D0', '#FF7F50', '#9370DB', '#008080',
           '#DC143C', '#00008B'
         ],
-        data: orderDataByYear[2024]  // default
+        data: orderDataByYear[2024]  
       }]
     },
     options: {
@@ -323,7 +314,6 @@ main {
     ordersChart.update();
   }
        
-        // Order Status Doughnut Chart
         new Chart(document.getElementById("orderStatusChart"), {
             type: "doughnut",
             data: {
